--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="footer__inner">
+{{/*    <div class="footer__inner">
     {{ if $.Site.Copyright }}
       <div class="copyright copyright--user">
         <span>{{ $.Site.Copyright | safeHTML }}</span>
@@ -9,7 +9,7 @@
     {{ end }}
       <span>:: <a href="https://github.com/panr/hugo-theme-terminal" target="_blank">Theme</a> made by <a href="https://github.com/panr" target="_blank">panr</a></span>
       </div>
-  </div>
+  </div>  */}}
 </footer>
 
 {{ $menu := resources.Get "js/menu.js" | js.Build }}
