--- a/assets/css/footer.scss
+++ b/assets/css/footer.scss
@@ -1,4 +1,4 @@
-.footer {
+/* .footer {
   padding: 40px 0;
   flex-grow: 0;
   opacity: .5;
@@ -41,27 +41,35 @@
       white-space: nowrap;
     }
   }
-}
+} */
 
 .extended_footer {
   /*background-color: $accent;*/
 
-  display: flex;
-  height: 10vh;
+  // display: flex;
+  //height: 10vh;
   width: 100%;
   max-width: 100vw;
-  margin: 0 auto;
-  box-sizing:content-box;
+  // margin: 0 auto;
+  // box-sizing:border-box;
   background-color: $accent;
-  line-height: 1.3;
-  position: relative;
+  // line-height: 1.3;
+  // position: relative;
+  text-align: center;
 
-  ul {
+  &__links {
     display: inline-grid;
     grid-auto-flow: row;
     grid-gap: 24px;
     justify-items: center;
     margin: auto;
+    padding: 40px 0;
+  }
+
+  .copyright {
+    padding: 20px 0;
+    color: #FFFFFF;
+    opacity: .2;
   }
   
   @media (min-width: 500px) {
@@ -73,20 +81,18 @@
   a {
     color: white;
     text-decoration: none;
-    box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.4);
   }
-  
-  a:hover {
-    box-shadow: inset 0 -1.2em 0 hsla(0, 0%, 100%, 0.4);
-  }
-  
+
   li:last-child {
     grid-column: 1 / 2;
-    grid-row: 1 / 2;
+    grid-row: 1;
   }
-  
-  li:hover ~ li p {
-    animation: wave-animation 0.3s infinite;
+  li {
+    transition: all 0.1s ease-in-out;
+  }
+
+  li:hover{
+    transform: scale(1.4);
   }
 
   @keyframes wave-animation {
