--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -111,7 +111,7 @@ figure {
     margin-top: 0;
     background: $accent;
     color: $background;
-    opacity: 0.5;
+    // opacity: 0.5;
 
     &.left {
       text-align: left;
