--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,3 +17,10 @@
 @import "code";
 @import "terms";
 @import "gist";
+
+// importing core styling file
+@import "../fontawesome/scss/fontawesome.scss";
+
+// our project needs Solid + Brands
+@import "../fontawesome/scss/solid.scss";
+@import "../fontawesome/scss/brands.scss";
