--- a/layouts/partials/extended_footer.html
+++ b/layouts/partials/extended_footer.html
@@ -8,7 +8,7 @@ To add an extended footer section, please create
       <li></i><a href="https://twitter.com/Gatheesha"><i class="fa-brands fa-twitter"></a></i></li>
       <li><a href="https://github.com/gatheeshanipulma"><i class="fa-brands fa-github"></i></a></li>
       <li><a href="https://gatheesha.itch.io"><i class="fa-brands fa-itch-io"></i></a></li>
-      <li><a href="mailto:julesforrest@gmail.com"><i class="fa-regular fa-envelope"></i></a></li>
+      <li><a href="mailto:gnipulma@gmail.com"><i class="fa-regular fa-envelope"></i></a></li>
     </ul>
     {{ if $.Site.Copyright }}
     <div class="copyright copyright--user">
