--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -30,6 +30,7 @@ body {
 }
 
 .headings--one-size {
+
   h1,
   h2,
   h3,
@@ -127,7 +128,8 @@ figure {
   }
 }
 
-code, kbd {
+code,
+kbd {
   font-family: 'Fira Code', Monaco, Consolas, Ubuntu Mono, monospace !important;
   font-feature-settings: normal;
   background: transparentize($accent, .8);
@@ -136,7 +138,8 @@ code, kbd {
   margin: 0 2px;
   font-size: .95rem;
 
-  code, kbd {
+  code,
+  kbd {
     background: transparent;
     padding: 0;
     margin: 0;
@@ -152,7 +155,7 @@ pre {
   border-top: 1px solid rgba(255, 255, 255, .1);
   border-bottom: 1px solid rgba(255, 255, 255, .1);
 
-  + pre {
+  +pre {
     border-top: 0;
     margin-top: -40px;
   }
@@ -343,12 +346,13 @@ hr {
 }
 
 sup {
- line-height: 0;
+  line-height: 0;
 }
 
 
 iframe {
   width: 660px;
+
   @media ($phone) {
     width: 226px;
   }
