--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,7 @@
 @import "logo";
 @import "main";
 @import "post";
+@import "graphics";
 @import "pagination";
 @import "footer";
 
@@ -17,6 +18,7 @@
 @import "code";
 @import "terms";
 @import "gist";
+
 
 // importing core styling file
 @import "../fontawesome/scss/fontawesome.scss";
