--- a/layouts/404.html
+++ b/layouts/404.html
@@ -67,7 +67,7 @@
 
   <div class="post">
     <h1 class="post-title">404 — {{ $.Site.Params.missingContentMessage | default "Page not found..." }}</h1>
-    <a href="{{ "" | absURL }}">{{ $.Site.Params.missingBackButtonLabel | default "Back to home page" }}&nbsp;→</a>
+    <a href="{{ "/" | absURL }}">{{ $.Site.Params.missingBackButtonLabel | default "Back to home page" }}&nbsp;→</a>
   </div>
 
 </body>
