--- a/assets/css/graphics.scss
+++ b/assets/css/graphics.scss
@@ -1,6 +1,6 @@
 #columns {
-	column-width: 250px;
-	column-gap: 15px;
+  column-width: 250px;
+  column-gap: 15px;
   width: 100%;
 }
 
@@ -10,39 +10,60 @@ div#columns figure {
   overflow: hidden;
   margin: 10px 0 0 0;
   border: 3px solid $accent;
+  transition: all 0.2s ease-out;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 
 
 div#columns figure img {
-	width: 100%; height: auto;
-  transition: all 1s ease-out;
+  width: 100%;
+  height: auto;
+  transition: all 0.5s ease-out;
   transform-origin: bottom;
+  filter: blur(0px);
   //box-shadow: inset 5px 5px 5px 5px rgba(0, 0, 0, 1);
-  
+
 }
 
 
 
-div#columns small { 
+div#columns small {
   font-size: 1rem;
-  float: right; 
+  float: right;
   text-transform: uppercase;
   color: #aaa;
-} 
+}
 
-div#columns small a { 
-  color: #666; 
-  text-decoration: none; 
+div#columns small a {
+  color: #666;
+  text-decoration: none;
   transition: .4s color;
 }
 
 div#columns figure:hover {
+
   //opacity: 0.1;
   //box-shadow: 0 0px 0px 5px rgba(0, 0, 0, 1);
-  img {transform: scale(1.02);}
+  img {
+    filter: blur(0px);
+  }
+
+  box-shadow: rgba(0, 0, 0, 1) 5px 5px,
+  rgba(0, 0, 0, 1) 4px 4px,
+  rgba(0, 0, 0, 1) 3px 3px,
+  rgba(0, 0, 0, 1) 2px 2px,
+  rgba(0, 0, 0, 1) 1px 1px;
+
 }
 
-@media screen and (max-width: 750px) { 
-  #columns { column-gap: 0px; }
-  #columns figure { width: 100%; }
+
+
+@media screen and (max-width: 750px) {
+  #columns {
+    column-gap: 0px;
+  }
+
+  #columns figure {
+    width: 100%;
+  }
 }
