--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -97,10 +97,10 @@ img {
   bottom: 0;
 
   /* A bit of padding around image */
-  padding: 1em;
+  padding: 4em;
 
   /* Translucent background */
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba($accent, 0.9);
 }
 
 /* Unhide the lightbox when it's the target */
@@ -114,10 +114,33 @@ img {
   width: 100%;
   height: 100%;
 
+  -webkit-animation: fadeIn 0.2s;
+  animation: fadeIn 0.2s;
+
   /* Size and position background image */
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
+}
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 p {
@@ -127,7 +150,7 @@ p {
 figure {
   display: table;
   max-width: 100%;
-  margin: 25px 0;
+  //margin: 25px 0;
 
   &.left {
     margin-right: auto;
