--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -4,7 +4,7 @@
       {{ .Content }}
     </div>
   {{ end }}
-  <div class="posts">
+{{/*    <div class="posts">
     {{ $isntDefault := not (or (eq (trim $.Site.Params.contentTypeName " ") "posts") (eq (trim $.Site.Params.contentTypeName " ") "")) }}
     {{ $contentTypeName := cond $isntDefault (string $.Site.Params.contentTypeName) "posts" }}
 
@@ -60,7 +60,7 @@
         {{ end }}
       </article>
     {{ end }}
-
+  */}}
     {{ partial "pagination.html" . }}
   </div>
 {{ end }}
