--- a/layouts/shortcodes/figure.html
+++ b/layouts/shortcodes/figure.html
@@ -1,15 +1,16 @@
 {{ if .Get "src" }}
-  {{$mysrc := .Get "src" | string }}
-  <figure class="{{ with .Get "position"}}{{ . }}{{ else -}} left {{- end }}" >
+{{$mysrc := .Get "src" | string }}
+<figure class="{{ with .Get " position"}}{{ . }}{{ else -}} left {{- end }}">
 
-    <a href="#{{ .Get "src" | path.BaseName }}-lightbox"><img src="{{ .Get "src" | safeURL }}" {{ with .Get "alt" }} alt="{{ . | plainify }}" {{ end }} {{ with .Get "style" }} style="{{ . | safeCSS }}" {{ end }} />
-    </a>
-    {{ if .Get "caption" }}
-    <figcaption class="{{ with .Get "captionPosition"}}{{ . }}{{ else -}} center {{- end }}" {{ with .Get "captionStyle" }} style="{{ . | safeCSS }}" {{ end }}>{{ .Get "caption" | safeHTML }}</figcaption>
-  {{ end }}
-  <a href="#" class="lightbox" id="{{ .Get "src" | path.BaseName }}-lightbox">
-    <div style="background-image:url('{{ strings.TrimPrefix "/" $mysrc }}')"></div>
+  <a href="#{{ .Get " src" | path.BaseName }}-lightbox"><img src="{{ .Get " src" | safeURL }}" {{ with .Get "alt" }}
+      alt="{{ . | plainify }}" {{ end }} {{ with .Get "style" }} style="{{ . | safeCSS }}" {{ end }} />
   </a>
-  </figure>
+  {{ if .Get "caption" }}
+  <figcaption class="{{ with .Get " captionPosition"}}{{ . }}{{ else -}} center {{- end }}" {{ with .Get "captionStyle"
+    }} style="{{ . | safeCSS }}" {{ end }}>{{ .Get "caption" | safeHTML }}</figcaption>
+  {{ end }}
+  <a href="#_" class="lightbox" id="{{ .Get " src" | path.BaseName }}-lightbox">
+    <span style="background-image:url('../{{ strings.TrimPrefix " /" $mysrc }}')"></span>
+  </a>
+</figure>
 {{ end }}
-
