--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <section id="about">
-    <h2>Im Gatheesha නිපුල්ම</h2>
+    <h2>Hey👋 I'm Gatheesha නිපුල්ම</h2>
   {{ if isset .Site.Params "description" }}
     {{ .Site.Params.description | $.Page.RenderString }}
   {{ end }}
