init sql cheatsheet

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,6 +1,6 @@
 // Fonts
 $font-family-body: "Recursive", monospace;
-$font-family-mono: "Recursive", monospace;
+$font-family-mono: "FiraCode", monospace;
 $font-family-tt: "Inconsolata", monospace;
 $font-size: 14px;
 $line-height: 1.725;
