--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -6,6 +6,22 @@
 }
 
 @font-face {
+  font-style: normal;
+  font-family: "FiraCode";
+  font-display: swap;
+  font-weight: 400;
+  src: url("../fonts/FiraCode-Regular.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-family: "FiraCode";
+  font-display: swap;
+  font-weight: 800;
+  src: url("../fonts/FiraCode-Bold.woff") format("woff");
+}
+
+@font-face {
   font-display: swap;
   font-family: 'Recursive';
   font-style:  normal;
